--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG,console,file
+log4j.rootLogger=ERROR,console,file
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
@@ -10,4 +10,4 @@ log4j.appender.file.DatePattern='_'yyyyMMdd
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %p %c (%L) - %m%n
 
-log4j.logger.org.smart4j=DEBUG
+log4j.logger.cn.didadu.smart4j=DEBUG
